# workspace-brown2022-duckiedrone

./: .gitignore  README.md  brown2022.code-workspace  build.sh  setup.sh
.catkin_tools/profiles/default/: devel_collisions.txt
assets/aux/: .dtproject  Dockerfile  Rakefile  dependencies-apt.txt  dependencies-py3.txt
assets/aux/launchers/: localization-node.sh  optical-flow-node.sh  rigid-transform-node.sh  slam-node.sh
assets/catkin/example/: CMakeLists.txt  package.xml
assets/catkin/example/launch/: example.launch
assets/disk_image/: README.md  generate.sh
assets/disk_image/config/: wpa_supplicant.conf
assets/stacks/default/: .env  docker-compose.yaml
assets/stacks/minimal/: docker-compose.yaml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/altitude/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/optical_flow/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/pid_controller/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/state_estimation/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: altitude.pc  catkin_tools_prebuild.pc  (+3 more)
src/altitude/: package.xml
src/altitude_node/: CMakeLists.txt  package.xml
src/example/: package.xml
src/optical_flow/: CMakeLists.txt
src/pid_controller/: CMakeLists.txt
src/slam/: CMakeLists.txt  package.xml
src/state_estimation/: CMakeLists.txt
(+30 files in other folders)
