<?xml version="1.0"?>
<package>
  <name>example_catkin_package</name>
  <version>0.0.0</version>
  <description>The example_catkin_package package</description>

  <license>GPLv3</license>
  <maintainer email="nobody@duckietown.com">Nobody</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
</package>
